v5.3.0
----------
- allow automatic charges to provide level3 card data.  This should allow for lower Stripe transaction costs.

v5.2.1
----------
- fix bug when trying to update the last time a card was used.

v5.2.0
----------
- redo removal of expired cards
    - general code cleanup
    - better splitting into functions
    - reuse functions elsewhere in code for better code clarity
- remove unused cards
    - each card now has a field in the database that tracks when it was last used
        - sqlite
            - update schema to support this
            - set a default value when the schema is updated so no cards have a zero value
        - cloud datastore
            - doesn't matter if field is missing, it will just return zero
            - set a default value upon the first run of this task so no cards have a zero value
        - if 
    - check for cards that haven't been used within last year and remove them
    - run via a cron task monthly
    - cards are updated each time they are used so we know which cards are active
- update previewed receipt to show timezone as it is set in app settings
- fix typo in gui for removing cards

v5.1.2
----------
- fix bug where failed charges were showing up in list of charges.

v5.1.1
----------
- improved error messages for failed charges.

v5.1.0
----------
- support for authorized transaction
    - "holds" on card; charge is authorized, but not captured.

v5.0.0
----------
- support for non-appengine installs.
    - uses SQLite as the database instead of Google Cloud Datastore.
    - since appengine gen. 2 uses no appengine-specific code, this became a viable option.
    - allows for migrating off of appengine (minus data migration) in case appengine becomes too expensive or changes the api heavily (again).
    - uses app.yaml for configuration so users don't have to set environmental variables.
        - same config as when deploying on appengine for ease-of-migration.